k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: edu-app
  namespace: education
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: edu.oneci.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: edu-app
          servicePort: 80
